# AkamaiOPEN-edgegrid-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  verify-setup.sh
.github/: dependabot.yml
.github/workflows/: pages-index.html  release.yml  rust.yml
examples/: basic_usage.rs  from_edgerc.rs
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs
test/: .edgerc
tests/: integration_test.rs  simple_test.rs
